--- a/src/app/ErrorStyling.css
+++ b/src/app/ErrorStyling.css
@@ -7,17 +7,15 @@
     background-color: rgb(17, 17, 17);
     height: 100vh;
 }
-.travoltagif{
+/* .travoltagif{
     width: 80%;
     height: 80%;
-}
-.errorbutton{
+} */
+.Button{
     color: white;
     background-color: gray;
-    text-transform: none;
 }
-.errorbutton:hover{
+.Button:hover{
     color: black;
     background-color: white;
-    text-transform: none;
 }
