did i actually just write this correctly and not actually CLEAR MY BROWSER COOKIES

--- a/src/app/ErrorStyling.css
+++ b/src/app/ErrorStyling.css
@@ -11,3 +11,11 @@
     width: 80%;
     height: 80%;
 } */
+.errorbutton{
+    color: white;
+    background-color: gray;
+}
+.errorbutton:hover{
+    color: black;
+    background-color: white;
+}
