--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
 }
 
 html,
@@ -21,4 +23,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+*::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
